Fixed Header spacing changes, carousel style changes

--- a/assets/stylesheets/pages/_content.scss
+++ b/assets/stylesheets/pages/_content.scss
@@ -19,7 +19,7 @@
 		padding: 0px 30px 0px 30px;
 	}
 	.outbrainGlobalClass{
-		border-top: 1px solid #363a43;
+		border-top: 1px solid $grey_border2;
 		margin: 10px 30px 10px 30px;
 	}
 }
