--- a/assets/stylesheets/pages/_photos.scss
+++ b/assets/stylesheets/pages/_photos.scss
@@ -10,8 +10,7 @@
   }
   .mw-h1{
     text-align: center;
-    font-size: 13px;
-    margin: 15px 0;
+    margin: 10px 0 10px 0;
     &:first-child{
       color:  $purple;
     }
@@ -79,7 +78,7 @@
   }
   .ob_org_header{
     margin-left:30px;
-    color: $grey_text !important;
+    color: $white4 !important;
     font-size:14px !important;
   }
   .mw-google-ads {
