--- a/assets/stylesheets/variables/_colors.scss
+++ b/assets/stylesheets/variables/_colors.scss
@@ -1,6 +1,6 @@
 $grey_footer:		#1A1E25;
 $grey_border:   	#363a43;
-$grey_border2:   	#32353e;
+$grey_border2:   	#3f424a;
 $grey_footer_text: 	#53575f;
 $grey_text: 		#9ca0a1;
 $grey_background:	#292D36;
@@ -8,6 +8,7 @@ $grey_car_text:		#555;
 $white1: 			#e3e2e2;
 $white2: 			#bab9b9;
 $white3: 			#e4e4e4;
-$purple:			#cb676e;
+$white4:			#eeeeee;
+$purple:			#ee4e84;
 $blue1:				#02B1FC;
-$thumbnail_title:	$white3;
+$thumbnail_title:	$white4;
